implementing empty report endpoint (#646)
Implementing empty report endpoints with openapi schema.
<img width="1097" height="225" alt="image"
src="https://github.com/user-attachments/assets/e1a03fce-569b-4de0-b28a-62f57bbdd6e0"
/>

OpenApi schema for `/reports` and `/reports/{year}` is not ready, so
schema contains only type property for response.

- Adding single handler and lambda function which handles all three
endpoints
- Adding hardcoded responses (tilt service is implemented)
